data/derived/comb/progs/unify/prog1259.ml.out
Characters 20-26:
  let _ = digitsOfInt 352663;;
                      ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
